# pkgconf-pypi

./: .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  environment.yml  meson.build  pyproject.toml  update-upstream.py
.github/workflows/: build.yml  test.yml
docs/: conf.py  index.rst
examples/header-only-library/: pyproject.toml
examples/header-only-library/example/include/: example.h
src/: buildhack.py
src/pkgconf/: __init__.py  __main__.py  _import.py  _path_entrypoints.py  diagnose.py
tests/: conftest.py  test_diagnose.py  test_distribution.py  test_entrypoints.py  test_examples.py  test_path_entrypoints.py  test_python_module.py
tests/data/: needs-example-lib.c
