# SPDX-FileCopyrightText: 2024 The pypackaging-native developers
#
# SPDX-License-Identifier: MIT

[build-system]
backend-path = ['src']
# build-backend = 'mesonpy'
# requires = ['meson-python']
build-backend = 'buildhack'
requires = ['meson-python', 'wheel']

[project]
name = 'pkgconf'
version = '2.5.1-0'
description = '`pkgconf` is a program which helps with discovering library dependencies and configuring compiler and linker flags.'
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [
  {name = 'Ralf Gommers', email = 'ralf.gommers@gmail.com'},
  {name = 'Filipe Laíns', email = 'lains@riseup.net'}
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'License :: OSI Approved :: ISC License (ISCL)',
  'Programming Language :: C',
  'Topic :: Software Development',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS'
]
requires-python = '>= 3.10'
dependencies = [
  'colorama; os_name == "nt"',
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov >= 5',
  'pytest-mock >= 2',
  'pytest-order >= 1',
  'pytest-github-actions-annotate-failures',
  'meson-python',
  'environment-helpers >= 0.1.3',
]
docs = [
  'sphinx ~= 7.0',
  'furo',
  'sphinx-design'
]

[project.scripts]
pkg-config = 'pkgconf.__main__:_entrypoint'
pkgconf = 'pkgconf.__main__:_entrypoint'

[project.urls]
homepage = 'https://pkgconf-pypi.readthedocs.io/en/latest/'
issues = 'https://github.com/pypackaging-native/pkgconf-pypi/issues'
source = 'https://github.com/pypackaging-native/pkgconf-pypi'

[tool.meson-python.args]
install = ['--tags=python-runtime']
# setup = ['--prefix=/build']

[tool.cibuildwheel]
# Build is Python-independent, so we select a single Python version (doesn't
# matter which one) to ensure we get one build per platform
build = 'cp311-*'

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = '10.9'

[tool.cibuildwheel.windows]
config-settings = 'setup-args=--vsenv build-dir=build'

[tool.mypy]
files = 'src'
python_version = '3.10'
show_error_codes = true
strict = true

[tool.ruff]
line-length = 127
src = ['src']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
extend-select = [
  'B',    # flake8-bugbear
  'C4',   # flake8-comprehensions
  'C9',   # mccabe
  'I',    # isort
  'PGH',  # pygrep-hooks
  'RUF',  # ruff
  'UP',   # pyupgrade
  'W',    # pycodestyle
  'YTT',  # flake8-2020
  'TRY',  # tryceratops
  'EM'    # flake8-errmsg
]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
'tests/packages/error-on-import/**' = ['TRY002', 'TRY003', 'EM101']

[tool.coverage.run]
source = [
  'pkgconf',
  'tests',
]
source_pkgs = [
  'pkgconf',
  'tests',
]

[tool.coverage.paths]
build = [
  'src',
  '*/site-packages',
  '*\site-packages',
]

[tool.coverage.report]
exclude_also = [
  '^\s*raise NotImplementedError\b',
]
